--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,13 @@
     height: 600px;
     width: 800px;
     border: 1px solid black;
+    background-color: black;
 
 }
 
 img {
     display: none;
 }
+
+
+
